Add helm and docker upload in grant.